--- a/src/main/resources/static/user-registration.html
+++ b/src/main/resources/static/user-registration.html
@@ -310,7 +310,7 @@
           return;
         }
 
-        const API_BASE = 'http://localhost:9090';
+        const API_BASE = 'https://sales-erp-production.up.railway.app';
         const headers = getAuthHeaders();
         console.log('Sending registration request with headers:', headers); // DEBUG
         console.log('Payload:', payload); // DEBUG
